# serena_customize

./: CHANGELOG.md  pyproject.toml
docs/02-usage/: 027_framework_support.md
src/serena/frameworks/: __init__.py  binding_index.py  mybatis.py  thymeleaf.py
src/serena/tools/: __init__.py  framework_tools.py
test/resources/repos/frameworks/test_repo/src/main/java/com/example/controller/: UserController.java
test/resources/repos/frameworks/test_repo/src/main/java/com/example/mapper/: UserMapper.java
test/resources/repos/frameworks/test_repo/src/main/resources/mapper/: UserMapper.xml
test/resources/repos/frameworks/test_repo/src/main/resources/templates/: user_detail.html
test/serena/frameworks/: test_binding_index.py  test_framework_parsers.py  test_framework_tools.py
